--- a/aulaJS04.html
+++ b/aulaJS04.html
@@ -152,7 +152,7 @@
                     img.src = 'jovemg.jpg'
                     //adulto
                 } else {
-                    img.src = 'sre.jpg'
+                    img.src = 'sra.jpg'
                     //idoso
                 }
             }
